# solution

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/cm_api/: __init__.py  main.py
apps/api/src/cm_api/auth/: __init__.py  dependencies.py  user.py
apps/api/src/cm_api/routers/: auth.py  chat.py  confluence.py  jobs.py  kpis.py  lightrag_status.py  page_editor.py  spaces.py  sync.py
apps/api/src/cm_api/services/: __init__.py  audit.py  lightrag.py  pages.py  queue.py
apps/api/tests/: test_chat_citations.py  test_frontend_static.py  test_page_editor_proposals.py
apps/beat/: pyproject.toml
apps/beat/tests/: test_celery_app.py
apps/web/: Dockerfile  index.html  nginx.conf  tsconfig.json  vite.config.ts
apps/web/public/: config.json
apps/web/src/: App.vue  main.ts  test-setup.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/cm_worker/: __init__.py  celery_app.py
apps/worker/src/cm_worker/confluence/: __init__.py  client.py  preview.py  publish.py
apps/worker/src/cm_worker/extract/: __init__.py  xhtml_to_text.py
apps/worker/src/cm_worker/jobs/: __init__.py  events.py
apps/worker/src/cm_worker/page_editor/: __init__.py  convert_markdown.py  generate_markdown.py  proposals.py
apps/worker/src/cm_worker/rag/: __init__.py  chunking.py  embedding.py  lightrag.py  retrieval.py
apps/worker/src/cm_worker/scheduler/: __init__.py  config.py
apps/worker/src/cm_worker/sync/: __init__.py  fetch_pages.py  reconcile_deleted.py
apps/worker/src/cm_worker/tasks/: chat_tasks.py  history.py  page_editor_tasks.py  sync_tasks.py
apps/worker/tests/: test_celery_registration.py  test_lightrag_sync.py  test_page_editor_generation.py  test_page_editor_publish.py  test_text_processing.py
docker/confluence/: README.md
docker/keycloak/: page-crafter-realm.json
docs/: api.md  architecture.md  configuration.md  deployment.md
frontend/: package.json
frontend/public/: silent-check-sso.html
frontend/src/: App.vue  test-setup.ts
src/page_crafter/: __init__.py  cli.py
tests/: test_celery_app.py  test_celery_registration.py  test_chat_citations.py  test_frontend_static.py  test_lightrag_sync.py  test_page_editor_generation.py  test_page_editor_proposals.py  test_page_editor_publish.py  test_text_processing.py
(+179 files in other folders)
