[project]
name = "page-crafter"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = []

[tool.uv.workspace]
members = [
  "packages/shared",
  "apps/api",
  "apps/worker"
]

[dependency-groups]
dev = [
  "pytest>=9.0.1"
]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests", "apps/worker/tests"]
pythonpath = [
  "packages/shared/src",
  "apps/api/src",
  "apps/worker/src"
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
