[project]
name = "cm-api"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "cm-shared",
  "celery>=5.5.3",
  "fastapi>=0.136.1",
  "httpx>=0.28.1",
  "pyjwt[crypto]>=2.10.1",
  "uvicorn[standard]>=0.38.0",
  "cryptography<47",
]

[tool.uv]
package = true

[tool.uv.sources]
cm-shared = { workspace = true }
