[project]
name = "cm-worker"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "cm-shared",
  "beautifulsoup4>=4.14.2",
  "celery[redis]>=5.5.3",
  "httpx>=0.28.1",
  "langchain-ollama>=1.1.0",
  "langchain-openai>=1.2.1",
  "langgraph>=1.1.10",
  "markdown-to-confluence>=0.5.9",
  "numpy>=2.3.5"
]

[tool.uv]
package = true

[tool.uv.sources]
cm-shared = { workspace = true }
